<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.alstromergymnasiet.stoppacorona.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_country"
        android:name="com.alstromergymnasiet.stoppacorona.ui.country.CountryFragment"
        android:label="@string/title_country"
        tools:layout="@layout/fragment_country" />

    <fragment
        android:id="@+id/navigation_statistics"
        android:name="com.alstromergymnasiet.stoppacorona.ui.statistics.StatisticsFragment"
        android:label="@string/title_statistics"
        tools:layout="@layout/fragment_statistics" />


</navigation>